--- a/package.json
+++ b/package.json
@@ -17,6 +17,27 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
+    "bootstrap": "^4.1.3",
+    "chart.js": "2.9.3",
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
+    "history": "^4.7.2",
+    "md5": "^2.2.1",
+    "mongodb": "^3.1.8",
+    "react": "^16.4.2",
+    "react-dom": "^16.5.0",
+    "react-redux": "^5.0.7",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^0.16.2",
+    "uuid": "^3.3.2",
+    "webpack": "^4.17.2"
+  },
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/node": "^7.0.0",
@@ -27,20 +48,27 @@
     "body-parser": "^1.18.3",
     "concurrently": "^4.0.1",
     "cors": "^2.8.4",
+    "cross-env": "^5.2.0",
     "express": "^4.16.3",
-    "mongodb": "^3.5.7",
-    "webpack": "^4.43.0",
+    "highground": "^1.0.3-beta",
     "history": "^4.7.2",
+    "jest": "^23.6.0",
     "md5": "^2.2.1",
-    "react": "^16.4.2",
+    "mongodb": "^3.5.7",
+    "nodemon": "^1.18.4",
     "react-bootstrap": "^1.2.2",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.5.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
-    "redux": "^4.0.0",
+    "react": "^16.4.2",
     "redux-logger": "^3.0.6",
     "redux-saga": "^0.16.2",
-    "uuid": "^8.1.0"
+    "redux": "^4.0.0",
+    "style-loader": "^0.23.0",
+    "uuid": "^8.1.0",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.7",
+    "webpack": "^4.43.0"
   }
 }
